--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.3"
+    "angular": "~1.4.3",
+    "angular-route": "~1.4.3",
+    "angular-resource": "~1.4.3"
   }
 }
