--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "githubviewer",
   "version": "1.0.0",
   "description": "",
-  "main": "app/index.js",
+  "main": "app.js",
   "scripts": {
     "start": "http-server -a 0.0.0.0 -p 8000",
     "test": "echo \"Error: no test specified\" && exit 1"
