organizando melhor os controllers e as views

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "gitHubViewer",
+  "name": "gitHubRepositories",
   "version": "0.0.0",
   "authors": [
     "hugoiuri <hugoraiuri@gmail.com>"
