--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "githubrepositories",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "start": "http-server -a 0.0.0.0 -p 8000",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "http-server": "^0.8.0"
-  }
+    "name": "githubrepositories",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "postinstall": "bower install",
+        "start": "http-server -a 0.0.0.0 -p 8000",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "http-server": "^0.8.0"
+    }
 }
