--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "description": "",
     "main": "app.js",
     "engines": {
-        "node": "0.12.x"
+        "node": "0.12.4"
     },
     "scripts": {
-        "postinstall": "/node_modules/bower/bin/bower install",
+        "postinstall": "node_modules/bower/bin/bower install",
         "start": "http-server -a 0.0.0.0 -p 8000",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
