--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
-    "engines": {
-        "node": "0.12.4"
-    },
     "scripts": {
         "postinstall": "node_modules/bower/bin/bower install",
-        "start": "http-server -a 0.0.0.0 -p 8000",
+        "start": "http-server",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
@@ -16,5 +13,18 @@
     "dependencies": {
         "bower": "^1.4.1",
         "http-server": "^0.8.0"
-    }
+    },
+    "engines": {
+        "node": "0.12.4"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/hugoiuri/gitHubRepositories"
+    },
+    "keywords": [
+        "node",
+        "heroku",
+        "angular"
+    ],
+    "license": "MIT"
 }
